# map-extensions

./: CHANGELOG.md  README.md  develop  map-extensions.cabal  map-exts.cabal  stack.yaml
examples/: Main.hs  Titanic.hs
src/: Main.hs  Titanic.hs
src/Data/Map/: Extensions.hs  Function.hs
