name:                map-extensions
version:             0.1.0.0
synopsis:            Extensions for Data.Map
description:         Please see README.md
homepage:            http://github.com/elsen-trading/map-extensions#readme
license:             BSD3
license-file:        LICENSE
author:              Charles Cooper
maintainer:          cooper.charles.m@gmail.com
copyright:           2016 Elsen, Inc
category:            Data Structures
build-type:          Simple
cabal-version:       >=1.10

executable example
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
library
  hs-source-dirs:      src
  exposed-modules:     Data.Map.Extensions
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers

